name:                conjure-extra
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18


Executable essenceGivensToJson2
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : EssenceGivensToJson2.hs
    build-depends    : bytestring
                     , aeson
                     , conjure-cp
                     , base
                     , vector
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G


Executable essenceLettingsToJson
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : EssenceLettingsToJson.hs
    build-depends    : bytestring
                     , aeson
                     , conjure-cp
                     , base
                     , vector
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G



Executable essenceGivensToFinds
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : EssenceGivensToFinds.hs
    build-depends    : bytestring
                     , aeson
                     , conjure-cp
                     , base
                     , containers
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G

Executable testGen
    default-language : Haskell2010
    hs-source-dirs   : src
    main-is          : TestGen.hs
    build-depends    : bytestring
                     , aeson
                     , conjure-cp
                     , base
                     , containers
                     , text
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        ---Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G
