name:                conjure-extra
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
-- copyright:
-- category:
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.18


Executable essenceGivensToJson2
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : EssenceGivensToJson2.hs
    build-depends    :
                       bytestring
                     , aeson
                     , base
                     , conjure-cp
                     , vector
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -- -fwarn-unused-matches
        -fno-warn-unused-matches
        -Wall
        -Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G


Executable essenceLettingsToJson
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : EssenceLettingsToJson.hs
    build-depends    :
                       aeson
                     , bytestring
                     , conjure-cp
                     , base
                     , vector
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -- -fwarn-unused-matches
        -fno-warn-unused-matches

        -Wall
        -Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G



Executable essenceGivensToFinds
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : EssenceGivensToFinds.hs
    build-depends    :
                       aeson
                     , bytestring
                     , conjure-cp
                     , base
                     , containers
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -- -fwarn-unused-matches
        -fno-warn-unused-matches
        -Wall
        -Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G

Executable testGen
    default-language : Haskell2010
    hs-source-dirs   : src, src/exec
    main-is          : TestGenMain.hs
    build-depends    :
                       aeson
                     , bytestring
                     , QuickCheck
                     , smallcheck
                     , base
                     , cmdargs
                     , conjure-cp
                     , containers
                     , datetime
                     , derive
                     , directory
                     , filepath
                     , groom
                     , old-locale
                     , process
                     , random
                     , text
                     , time
                     , transformers
                     , cereal
                     , hashable
                     , template-haskell
                     , unordered-containers
                     , dlist
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -- -fwarn-unused-matches
        -fno-warn-unused-matches
        -Wall
        ---Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G

Executable testSample
    default-language : Haskell2010
    hs-source-dirs   : src, src/exec
    main-is          : TestSampleMain.hs
    build-depends    :
                       aeson
                     , bytestring
                     , QuickCheck
                     , smallcheck
                     , base
                     , cmdargs
                     , conjure-cp
                     , containers
                     , datetime
                     , derive
                     , directory
                     , filepath
                     , groom
                     , old-locale
                     , process
                     , random
                     , text
                     , time
                     , transformers
                     , cereal
                     , hashable
                     , template-haskell
                     , unordered-containers
                     , dlist
                     , mtl
                     , pretty
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -- -fwarn-unused-matches
        -fno-warn-unused-matches
        -Wall
        ---Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G


Executable essenceSolver
    default-language : Haskell2010
    hs-source-dirs   : src, src/exec
    main-is          : EssenceSolverMain.hs
    build-depends    :
                       aeson
                     , bytestring
                     , QuickCheck
                     , base
                     , cmdargs
                     , conjure-cp
                     , containers
                     , datetime
                     , derive
                     , directory
                     , filepath
                     , groom
                     , old-locale
                     , process
                     , random
                     , text
                     , time
                     , transformers
                     , pretty
                     , mtl
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -- -fwarn-unused-matches
        -fno-warn-unused-matches
        -Wall
        ---Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G
