name:                essence-testgen
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
-- copyright:
-- category:
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.18

Executable testGen1
    default-language : Haskell2010
    hs-source-dirs   : src, src/Exec
    main-is          : Test.hs
    build-depends    :
                       aeson
                     , bytestring
                     , QuickCheck
                     , smallcheck
                     , base
                     , cmdargs
                     , conjure-cp
                     , containers
                     , datetime
                     , derive
                     , directory
                     , filepath
                     , groom
                     , old-locale
                     , process
                     , random
                     , text
                     , time
                     , transformers
    ghc-prof-options:
        -auto-all
        -caf-all
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        ---Werror
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G
